--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
     "C_Cpp.errorSquiggles": "disabled",
-    "C_Cpp.default.compilerPath": "c:\\Users\\bobm\\AppData\\Local\\Arduino15\\packages\\DxCore\\tools\\avr-gcc\\7.3.0-atmel3.6.1-azduino7b1\\bin\\avr-g++.exe"
+    "C_Cpp.default.compilerPath": "c:\\Users\\bobm\\AppData\\Local\\Arduino15\\packages\\DxCore\\tools\\avr-gcc\\7.3.0-atmel3.6.1-azduino7b1\\bin\\avr-g++.exe",
+    "files.associations": {
+        "wiring_private.h": "c"
+    }
 }
